--- a/app/src/main/res/layout/activity_fullscreen9.xml
+++ b/app/src/main/res/layout/activity_fullscreen9.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorAccent"
     tools:context=".FullscreenActivity9">
 
@@ -51,5 +52,39 @@
 
         </LinearLayout>
     </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="44dp"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/balloon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_baloonorange"
+            />
+        <ImageView
+            android:id="@+id/balloon1"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_baloonskyblue"
+            />
+        <ImageView
+            android:id="@+id/balloon2"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_baloongreen"
+            />
+        <ImageView
+            android:id="@+id/balloon3"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_baloonwhite"
+            />
+    </LinearLayout>
 
 </FrameLayout>
